* CSS rename testimonialswidget_testimonial(s) to testimonials-widget-testimonial(s)
* Correct static get_testimonials_html and get_testimonials_htmls function declaration
* Correct static validators call
* Explain options inheritance
* FEATURE Remove Plugin Data on Deletion? - Delete all Testimonials Widget data and options from database on plugin deletion
* Refactor out get_quote and get_cite from get_testimonial_html
* Remove $blank from testimonials_truncate()
* Rename metabox.class.php class-redrokk-metabox-class.php
* Rename settings.testimonials-widget.php class-settings-testimonials-widget.php
* Rename testimonials-widget-widget.php class-testimonials-widget-widget.php
* Show latest updates notice on activation
* Update CSS for WordPress Coding standards
* Update FAQ
* Update JavaScript for WordPress Coding standards
* Update PHP for WordPress Coding Standards
* Update POT
* Update TODOs

= 2.11.3 =
* BUGFIX [Can't set featured image](http://wordpress.org/support/topic/cant-set-featured-image-3)
* Begin WordPress coding standard cleanup
* Bold option headers
* Change `has_archive` default from `testimonials` to `testimonials-archive`
* Clean up static method calls to prevent PHP Strict notices
* Correct filter name `testimonials_widget_next_posts_link` to `testimonials_widget_next_posts_link_text`
* Correct static methods calling
* Secure activation, deactivation, uninstall operations
* Update POT
* Update profile

= 2.11.2 =
* Add `min1` and `nozero` validation
* Always include settings class
* BUGFIX Don't prepend http to email addresses
* Move lesser used widget options to expandable Additional Widget Options section
* Move settings setup to `init`
* Revise `absint` and `intval` validation to default on blank entry
* Update POT
* Update TODO
* Update text domain for localization and POT
* Use `links_add_target` for widget title link

= 2.11.1 =